log
Sun 20 Apr 2025 01:57:15 AM UTC: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
eeef3b7
Sun 20 Apr 2025 01:59:42 AM UTC: 
Compilation failed
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
b9ba157
Sun 20 Apr 2025 02:10:26 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
30581aa
Sun 20 Apr 2025 02:28:17 AM UTC: 
 hashmap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
Compilation failed
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
44ff77f
Sun 20 Apr 2025 02:50:12 AM UTC: 
 hashmap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:81:22: error: ‘i’ undeclared (first use in this function)
   81 |     free(old_buckets[i]);
      |                      ^
hashmap.c:81:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:9: error: unused variable ‘old_size’ [-Werror=unused-variable]
   65 |     int old_size = map->size;
      |         ^~~~~~~~
cc1: all warnings being treated as errors
9af442b
Sun 20 Apr 2025 02:51:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:9: error: unused variable ‘old_size’ [-Werror=unused-variable]
   65 |     int old_size = map->size;
      |         ^~~~~~~~
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
b629956
